2006-11-13  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/cipher.c, src/munged/mac.c, src/munged/md.c:
	  Added log_msg()s at LOG_DEBUG to investigate infrequent "Unable to
	  encrypt credential" errors when using the blowfish cipher with
	  Libgcrypt.  The bug is generated by gcry_cipher_setkey() returning a
	  "Weak encryption key" error string.  Googling around turns up a post
	  by Christian Grothoff saying "This is a (forgotten) problem with
	  libgcrypt.  The crypto library insists on checking that the key for
	  the blowfish cypher is 'secure'."  Krista Bennett then reports that
	  "The libgcrypt weak encryption key bug has been fixed in CVS."

	* config/x_ac_path_openssl.m4:
	  Added /usr/sfw to _x_ac_path_openssl_dirs for Solaris.

	* configure.ac: Fixed type check for CRYPTO_dynlock so OpenSSL-specific
	  CFLAGS are included.

	* src/munged/cipher.c (HAVE_OPENSSL:_cipher_map_enum): Fixed compiler
	  warning "assignment discards qualifiers from pointer target type".
	* src/munged/md.c (HAVE_OPENSSL:_md_map_enum): Fixed compiler warning
	  "assignment discards qualifiers from pointer target type".

	* src/munged/mac.c, src/munged/mac.h:
	  Renamed struct mac_ctx len var to diglen.
	* src/munged/md.c, src/munged/md.h:
	  Renamed struct md_ctx len var to diglen.

2006-11-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_update):
	  Tweaked assertions.  Updated documentation.
	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_final):
	  Tweaked assertions.

	* src/munged/cipher.c (cipher_update, cipher_final):
	  Added check for valid dstlen.

	* src/munged/mac.c (mac_init): Changed so assert assignments are only
	  made if _mac_init() succeeds.
	* src/munged/md.c (md_init): Changed so assert assignments are only
	  made if _md_init() succeeds.

	* src/munged/random.h: Updated documentation for random_init().
	* src/munged/random.c (HAVE_LIBGCRYPT:_random_read_seed):